[20210221]clone-project Finish

--- a/AhnDaehyun/chrome/clone-project/index.html
+++ b/AhnDaehyun/chrome/clone-project/index.html
@@ -14,11 +14,19 @@
     </form>
     <h4 class="js-greetings greetings"></h4>
     <form class="js-toDoForm">
-      <input type="text" placeholder="Write a to do" />
+      <input type="text" placeholder="해야할 일을 적어주세요." />
     </form>
     <ul class="js-toDoList"></ul>
+
+    <div class="weather">
+      <span class="js-place"></span>
+      <span class="js-temperature"></span>
+    </div>
+
     <script src="greeting.js"></script>
     <script src="clock.js"></script>
     <script src="todo.js"></script>
+    <script src="bg.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
