--- a/AhnDaehyun/chrome/clone-project/index.html
+++ b/AhnDaehyun/chrome/clone-project/index.html
@@ -6,17 +6,24 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="js-clock">
-      <h1>00:00</h1>
+    <div class="header">
+      <div class="js-clock">
+        <h1>00:00</h1>
+      </div>
+      <form class="js-form form">
+        <input type="text" placeholder="What is your name?" />
+      </form>
+      <h4 class="js-greetings greetings"></h4>
+      <form class="js-toDoForm">
+        <input type="text" placeholder="해야할 일을 적어주세요." />
+      </form>
     </div>
-    <form class="js-form form">
-      <input type="text" placeholder="What is your name?" />
-    </form>
-    <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
-      <input type="text" placeholder="해야할 일을 적어주세요." />
-    </form>
-    <ul class="js-toDoList"></ul>
+
+    <div class="view">
+      <div class="scrollBlind">
+        <ul class="js-toDoList"></ul>
+      </div>
+    </div>
 
     <div class="weather">
       <span class="js-place"></span>
